# python-directory-size-benchmark

./: .gitignore  LICENSE  Pipfile  README.md  benchmark.py  pyproject.toml
dir_size_benchmark/: cli.py  config.py  directory.py  methods.py
